[gd_scene load_steps=2 format=3 uid="uid://cav0gpd1vthmw"]

[ext_resource type="Script" path="res://battle.gd" id="1_y0ymu"]

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_y0ymu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 64

[node name="playerPosition" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Panel" type="Panel" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel/MarginContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TestName"

[node name="PlayerStatus" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status"

[node name="PlayerHp" type="Label" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "45/50"

[node name="ProgressBar" type="ProgressBar" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/Panel/MarginContainer/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.831373, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.882353, 0, 1)
value = 100.0
rounded = true
fill_mode = 1
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Button" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 1"

[node name="Button2" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 2"

[node name="Button3" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 3"

[node name="Button4" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 4"
